--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.diabeticguard">
+
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:required="true" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_pill_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_pill_logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Project2"
-        tools:targetApi="31">
+        android:theme="@style/Theme.DiabeticGuard">
+        <receiver android:name="com.example.diabeticguard.AlarmBroadcastReceiver" >
+        </receiver>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.diabeticguard.SearchHomePage"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.HomePage"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.DisplayUserInfo"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.CameraHomePage"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.DisplayBloodSugarChartPage"
+            android:exported="false" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="ocr" />
+
+        <activity
+            android:name="com.example.diabeticguard.LoginUser"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.RegisterUser"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,5 +75,9 @@
             </intent-filter>
         </activity>
     </application>
-
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
 </manifest>
