--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
         <activity
             android:name="com.example.diabeticguard.UploadToDBPage"
             android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.DisplayStandardPage"
+            android:exported="false" />
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -64,15 +68,11 @@
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="ocr" />
-
-        <activity
-            android:name="com.example.diabeticguard.LoginUser"
-            android:exported="false" />
         <activity
             android:name="com.example.diabeticguard.RegisterUser"
             android:exported="false" />
         <activity
-            android:name="com.example.diabeticguard.MainActivity"
+            android:name="com.example.diabeticguard.MainActivityLogin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
