--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission
         android:name="android.permission.ACCESS_MEDIA_LOCATION"
         android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
@@ -53,7 +54,12 @@
         <activity
             android:name="com.example.diabeticguard.DisplayStandardPage"
             android:exported="false" />
-
+        <activity
+            android:name="com.example.diabeticguard.MealPage"
+            android:exported="false" />
+        <activity
+            android:name="com.example.diabeticguard.CouponPage"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
