--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:required="true" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission
         android:name="android.permission.ACCESS_MEDIA_LOCATION"
         android:required="true" />
@@ -40,7 +41,7 @@
             android:name="com.example.diabeticguard.HomePage"
             android:exported="false" />
         <activity
-            android:name="com.example.diabeticguard.DisplayUserInfo"
+            android:name="com.example.diabeticguard.DisplayMeterInfo"
             android:exported="false" />
         <activity
             android:name="com.example.diabeticguard.CameraHomePage"
